force-app/main/default/objects/Access_Restriction__c/Access_Restriction__c.object-meta.xml
<CustomObject>
    <label>Access Restriction</label>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Restriction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Restrictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>