force-app/main/default/objects/Access_Restriction__c/fields/Agreement_and_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agreement_and_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement and Contract</label>
    <referenceTo>SymphonyLF__Agreement_Contract__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>