force-app/main/default/objects/Access_Restriction__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>