force-app/main/default/objects/Access_Restriction__c/fields/ClientRecord__c.field-meta.xml
<CustomField>
    <fullName>ClientRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Record</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipName>Wall_Of_Users_Client_Record</relationshipName>
    <type>Lookup</type>
</CustomField>