force-app/main/default/objects/Access_Restriction__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copyright</label>
    <referenceTo>SymphonyLF__Copyright__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>