force-app/main/default/objects/Access_Restriction__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design</label>
    <referenceTo>SymphonyLF__Design__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>