force-app/main/default/objects/Access_Restriction__c/fields/Dispute_Opposition__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Opposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute/Opposition</label>
    <referenceTo>SymphonyLF__Dispute_Opposition__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>