force-app/main/default/objects/Access_Restriction__c/fields/General_Matter__c.field-meta.xml
<CustomField>
    <fullName>General_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Matter</label>
    <referenceTo>SymphonyLF__General_Matter__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>