force-app/main/default/objects/Access_Restriction__c/fields/Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Fields__c</fullName>
    <description>To store the Id that is related to the Lookup Matter populated
**Not use Client as it has logic to provide sharing**</description>
    <formula>BLANKVALUE(Agreement_and_Contract__c,
BLANKVALUE(Patent__c,
BLANKVALUE(Trademark__c,
BLANKVALUE(Copyright__c,
BLANKVALUE(Design__c,
BLANKVALUE(Dispute_Opposition__c,
BLANKVALUE(General_Matter__c,
NULL
)
)
)
)
)
)
)</formula>
    <label>Lookup Fields Record Id</label>
    <type>Text</type>
</CustomField>