force-app/main/default/objects/Access_Restriction__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mark</label>
    <referenceTo>SymphonyLF__Mark__c</referenceTo>
    <relationshipLabel>Access Restrictions</relationshipLabel>
    <relationshipName>Access_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>