force-app/main/default/objects/Access_Restriction__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>**Picklist API Name should always be object API Name**
As it is used for sharing logic</description>
    <label>ObjectName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyLF__Patent__c</fullName>
                <label>Patents</label>
            </value>
            <value>
                <fullName>SymphonyLF__Client__c</fullName>
                <label>Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>