force-app/main/default/objects/Access_Restriction__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent</label>
    <referenceTo>SymphonyLF__Patent__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>