force-app/main/default/objects/Access_Restriction__c/fields/Patent_Family__c.field-meta.xml
<CustomField>
    <fullName>Patent_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent Family</label>
    <referenceTo>SymphonyLF__Patent_Family__c</referenceTo>
    <relationshipLabel>Access Restrictions</relationshipLabel>
    <relationshipName>Access_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>