force-app/main/default/objects/Access_Restriction__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipName>Person</relationshipName>
    <type>Lookup</type>
</CustomField>