force-app/main/default/objects/Access_Restriction__c/fields/Revoke_Record_Access__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Record_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revoke Record Access</label>
    <type>Checkbox</type>
</CustomField>