force-app/main/default/objects/Access_Restriction__c/fields/Trademark__c.field-meta.xml
<CustomField>
    <fullName>Trademark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trademark</label>
    <referenceTo>SymphonyLF__Trademark__c</referenceTo>
    <relationshipName>Wall_Of_Users</relationshipName>
    <type>Lookup</type>
</CustomField>