force-app/main/default/objects/Access_Restriction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Patent</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
            <value>
                <fullName>Copyright</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Dispute/Opposition</fullName>
            </value>
            <value>
                <fullName>Agreement and Contract</fullName>
            </value>
            <value>
                <fullName>Patent Family</fullName>
            </value>
            <value>
                <fullName>Design Family</fullName>
            </value>
            <value>
                <fullName>Mark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>